--- a/example.env
+++ b/example.env
@@ -9,6 +9,7 @@ DHIS2_DATABASE_PORT=5432
 DHIS2_DATABASE_NAME=dhis2
 DHIS2_DATABASE_USER=dhis
 DHIS2_DATABASE_PASSWORD=dhis
+DHIS2_HOME=/opt/dhis2
 
 # DHIS2 Service Configuration
 DHIS2_PORT=8181  # Host port for DHIS2
